--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -104,6 +104,9 @@ p {
   padding-right: 10px;
   padding-left: 10px;
 }
+.css-ahj2mt-MuiTypography-root{
+  padding: 10px !important;
+}
 button{
   font-size: 12px;
   font-weight: 400;
